add and modify files